Use plugin options, add date formatting

--- a/src/_layouts/page.liquid
+++ b/src/_layouts/page.liquid
@@ -2,7 +2,10 @@
 layout: base
 ---
 
-<h1>{{ title }}</h1>
-<main>
+{% include 'page/header' %}
+
+<main id="content">
   {{ content }}
 </main>
+
+{% include 'page/footer' %}
