Experiment with FrontMatter

--- a/src/_includes/page/footer.liquid
+++ b/src/_includes/page/footer.liquid
@@ -1,3 +1,11 @@
 <footer id="contentinfo">
-  <p>Copyright &copy; {% year %} <strong>{{ site.author }}</strong></p>
+  <p>Copyright &copy; {% year %}
+    <strong>{{ site.author }}</strong>
+  </p>
+
+  {% unless isSocialPreview %}
+    <p>
+      <a href="{{ docOg }}">social image page</a>
+    </p>
+  {% endunless %}
 </footer>
