--- a/src/_layouts/base.liquid
+++ b/src/_layouts/base.liquid
@@ -8,20 +8,36 @@ eleventyComputed:
 ---
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ docTitle }}</title>
-  <meta name="description" content="{{ docDescription | mdI | strip_html | strip }}">
-  <link rel="stylesheet" href="{{ docStyle }}">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ docTitle }}</title>
+    <meta name="description" content="{{ docDescription | mdI | strip_html | strip }}">
+    <link rel="stylesheet" href="{{ docStyle }}">
 
-  {% include 'head/icons' %}
-  {% unless isSocialPreview -%}
-    {% include 'head/open-graph' %}
-  {%- endunless %}
-</head>
-<body>
-  {{ content }}
-</body>
+    {% include 'head/icons' %}
+    {% unless isSocialPreview -%}
+      {% include 'head/open-graph' %}
+    {%- endunless %}
+
+    {% if page.url == '/' %}
+      <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    {% endif %}
+  </head>
+  <body>
+    {{ content }}
+
+    <script>
+      if (window.netlifyIdentity) {
+        window.netlifyIdentity.on('init', user => {
+          if (!user) {
+            window.netlifyIdentity.on('login', () => {
+              document.location.href = '/admin/';
+            });
+          }
+        });
+      }
+    </script>
+  </body>
 </html>
