A direction to move in

--- a/src/_generate/open-graph.liquid
+++ b/src/_generate/open-graph.liquid
@@ -1,14 +1,8 @@
 ---
-layout: base
-isSocialPreview: true
-titlePre: 'OpenGraph: '
-style: 'social.css'
+layout: og
 pagination:
   data: collections.all
   size: 1
   alias: source
-permalink: "_og/{{ source.url }}/index.html"
+permalink: "_og{{ source.url }}/index.html"
 ---
-
-<h1>{{ source.data.title | mdI }}</h1>
-<p>From MiriamSuzanne.com</p>
