--- a/src/_sass/layout/_page-header.scss
+++ b/src/_sass/layout/_page-header.scss
@@ -1,34 +1,14 @@
-#summary {
-  --column: wide;
-  font-size: var(--large);
-  font-style: italic;
-  margin-block: var(--spacer);
-
-  code {
-    font-style: normal;
-  }
-
-  em {
-    background: var(--mark-bg, var(--shadow));
-  }
-}
-
 #page-header {
   --column: extra;
   --banner-border: 2px solid var(--border);
-  border-block: var(--banner-border);
-  margin-block: calc(var(--gap) * 2);
-  padding-block: calc(var(--gap) * 2);
 
-  &:has([pubdate]) {
-    border-block-start: 0;
-    padding-block-start: 0;
+  &:first-child {
+    margin-block-start: var(--spacer);
   }
 
   [pubdate] {
     align-items: center;
     display: flex;
-    margin-block-end: calc(var(--gap) * 2);
 
     &::after {
       border-bottom: var(--banner-border);
@@ -39,13 +19,28 @@
   }
 }
 
+title-group {
+  display: block;
+  padding-block: calc(var(--gap) * 2);
+
+  &:first-child {
+    border-top: var(--banner-border);
+  }
+
+  &:last-child {
+    border-bottom: var(--banner-border);
+  }
+}
+
 h1 {
   font-size: var(--h1);
   margin-block: 0;
   line-height: normal;
 
-  background: linear-gradient(to bottom right, var(--feature));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  max-width: max-content;
+  @supports (-webkit-background-clip: text) {
+    background: linear-gradient(to bottom right, var(--feature));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    max-width: max-content;
+  }
 }
