--- a/src/_sass/config/_colors.scss
+++ b/src/_sass/config/_colors.scss
@@ -4,18 +4,21 @@
   --on-accent-light: black;
   --border-light: cadetblue;
   --shadow-light: lavenderblush;
+  --full-bg-light: white;
 
   --accent-dark: mediumvioletred;
   --on-accent-dark: white;
   --complement-dark: teal;
   --border-dark: darkcyan;
-  --shadow-dark: black;
+  --full-bg-dark: black;
+  --shadow-dark: var(--full-bg-dark);
 
   --accent: var(--accent-light);
   --complement: var(--complement-light);
   --on-accent: var(--on-accent-light);
   --border: var(--border-light);
   --shadow: var(--shadow-dark);
+  --full-bg: var(--full-bg-dark);
 
   --feature:
     var(--accent),
@@ -26,10 +29,10 @@
   --mark-gradient: linear-gradient(
     -85deg,
     transparent,
-    var(--mark, var(--shadow)) 3% 98%,
+    var(--mark, var(--shadow)) 5% 95%,
     transparent
   );
-  --mark-bg: var(--mark-gradient) no-repeat 0 100% / 100% 60%;
+  --mark-bg: var(--mark-gradient) no-repeat 0 100% / 100% 55%;
 
 
   &[data-theme=dark] {
@@ -43,5 +46,6 @@
     --complement: var(--complement-dark);
     --border: var(--border-dark);
     --shadow: var(--shadow-light);
+    --full-bg: var(--full-bg-light);
   }
 }
