--- a/src/_sass/social.scss
+++ b/src/_sass/social.scss
@@ -1,11 +1,92 @@
-html {
-  color-scheme: dark light;
+@use 'config/colors';
+@use 'config/fonts';
+@use 'config/scale';
 
-  &::before {
-    content: 'the social preview';
-    background-color: maroon;
-    color: white;
-    padding: 2em;
-    display: block;
+@layer reset {
+  * { box-sizing: border-box; }
+}
+
+@layer base {
+  @include fonts.webfonts;
+
+  html {
+    @include colors.vars;
+    @include fonts.vars;
+    @include scale.vars;
+
+    color-scheme: dark;
+    accent-color: var(--accent);
+    max-width: 1200px;
   }
+
+  body {
+    aspect-ratio: 120/63;
+    font-family: var(--serif);
+    font-size: var(--large);
+    line-height: 1.3;
+    margin: 0;
+    text-shadow: 0 1px 0 var(--shadow);
+  }
+}
+
+body {
+  display: grid;
+  grid-template:
+    'title' 1fr
+    'footer' auto
+    / minmax(0, 1fr)
+  ;
+  padding: var(--spacer);
+}
+
+picture {
+  margin: calc(var(--spacer) * -1);
+  grid-area: 1 / 1 / -1 / -1;
+  overflow: hidden;
+  z-index: -1;
+}
+
+img {
+  object-fit: cover;
+  width: 100%;
+  height: auto;
+  opacity: 0.5;
+}
+
+header {
+  grid-area: title;
+  text-wrap: balance;
+}
+
+h1, h2 {
+  margin: 0;
+  display: inline;
+  line-height: 1.1;
+}
+
+h2 {
+  font-style: italic;
+}
+
+page-date {
+  display: block;
+}
+
+span,
+a {
+  background-image: linear-gradient(
+    to bottom,
+    transparent 0 30%,
+    var(--mark, var(--shadow)) 30% 72%,
+    transparent 72% 100%
+  );
+}
+
+footer {
+  grid-area: footer;
+}
+
+a:any-link {
+  color: inherit;
+  text-decoration: none;
 }
