--- a/src/_includes/objects/area-item.webc
+++ b/src/_includes/objects/area-item.webc
@@ -1,16 +1,23 @@
 <script webc:setup>
   const getRecent = (pages) => (pages || [])
     .sort((a, b) => b.date - a.date)
-    .slice(0, 4);
+    .slice(0, 6);
 </script>
 
-<article
-  webc:root
-  data-item="area"
->
-  <h3 @text="this.areaName"></h3>
-  <a
-    webc:for="page of getRecent(areaPages)"
-    :href="page.url"
-    @text="page.data.title"></a>
-</article>
+<template webc:root>
+  <h3>
+    <a
+      :href="this.areaItem.url"
+      @html="this.areaItem.data.banner || this.areaItem.data.title"
+    ></a>
+  </h3>
+  <template
+    webc:nokeep
+    webc:for="(item, index) of getRecent(this.areaPages)"
+  >
+    <span webc:if="index !== 0">/</span>
+    <a
+      :href="item.url"
+      @text="item.data.sub || item.data.title"></a>
+  </template>
+</template>
