--- a/src/_sass/config/_fonts.scss
+++ b/src/_sass/config/_fonts.scss
@@ -1,9 +1,28 @@
+@use '../npm/alegreya';
+@use '../npm/jetbrains';
+@use 'sass:map';
+
 @mixin vars {
   --os-serif: palatino, palatino linotype, palatino lt std, book antiqua, georgia;
   --os-code: sfmono-regular, consolas, monaco;
 
-  --serif: var(--var-serif, var(--os-serif, ui-monospace)), serif;
-  --code: var(--var-code, var(--os-code, ui-serif)), monospace, serif;
+  --var-serif: "Alegreya Variable", var(--os-serif, ui-serif);
+  --serif: var(--var-serif, var(--os-serif, ui-serif)), serif;
+
+  --var-code: "JetBrains Mono Variable", var(--os-code, ui-monospace);
+  --code: var(--var-code, var(--os-code, ui-monospace)), monospace, serif;
 
   --code-adjust: 0.45;
+}
+
+$options: (
+  subsets: ('latin', 'latin-ext'),
+  directory: '/fonts',
+  styles: 'all',
+  display: fallback,
+);
+
+@mixin webfonts {
+  @include alegreya.faces($options...);
+  @include jetbrains.faces($options...);
 }
