--- a/src/_sass/layout/_nav.scss
+++ b/src/_sass/layout/_nav.scss
@@ -3,8 +3,9 @@
 
   header {
     --column: extra;
-    align-items: center;
+    align-items: baseline;
     display: grid;
+    gap: var(--gap);
     grid-template: 'nav theme' auto / 1fr auto;
   }
 
@@ -19,11 +20,21 @@
 }
 
 nav {
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--shim);
+  justify-content: start;
+
+  @container (inline-size > 60ch) {
+    column-gap: var(--gap);
+  }
+
   a {
     &:any-link {
       display: inline-block;
-      text-align: center;
+      flex: none;
       position: relative;
+      text-align: center;
       text-decoration: none;
     }
 
