--- a/src/_sass/layout/_page-header.scss
+++ b/src/_sass/layout/_page-header.scss
@@ -6,7 +6,7 @@
     margin-block-start: var(--spacer);
   }
 
-  [pubdate] {
+  page-date {
     align-items: center;
     display: flex;
 
@@ -20,15 +20,18 @@
 }
 
 title-group {
+  --title-space: calc(var(--gap) * 2);
   display: block;
-  padding-block: calc(var(--gap) * 2);
+  padding-block: calc(var(--title-space) - 1em);
 
   &:first-child {
     border-top: var(--banner-border);
+    padding-block-start: var(--title-space);
   }
 
   &:last-child {
     border-bottom: var(--banner-border);
+    padding-block-end: var(--title-space);
   }
 }
 
@@ -43,4 +46,8 @@ h1 {
     -webkit-text-fill-color: transparent;
     max-width: max-content;
   }
+}
+
+.subtitle {
+  margin-block-end: 0.5em;
 }
