--- a/src/_sass/config/_scale.scss
+++ b/src/_sass/config/_scale.scss
@@ -7,8 +7,8 @@
 
   --small: var(--step--1);
   --normal: var(--step-0);
-  --medium: var(--step-1);
-  --large: var(--step-2);
+  --large: var(--step-1);
+  --xlarge: var(--step-2);
   --h1: var(--step-3);
 
   --gap: var(--step--1);
