--- a/src/_sass/layout/_footer.scss
+++ b/src/_sass/layout/_footer.scss
@@ -1,6 +1,7 @@
 #content-info {
   background-color: var(--shadow);
   grid-area: footer;
+  margin-block-start: var(--spacer);
   padding-block: var(--spacer);
 
   footer {
