--- a/src/_sass/layout/_summary.scss
+++ b/src/_sass/layout/_summary.scss
@@ -1,6 +1,6 @@
 #summary {
   --column: wide;
-  font-size: var(--large);
+  font-size: var(--xlarge);
   font-style: italic;
   margin-block: var(--spacer);
 
