--- a/src/_sass/base/_type.scss
+++ b/src/_sass/base/_type.scss
@@ -3,3 +3,12 @@ body {
   font-size: var(--normal);
   line-height: 1.3;
 }
+
+h2 {
+  font-size: var(--large);
+  margin-block: var(--spacer) var(--gap);
+}
+
+h3, h4, h5, h6 {
+  font-size: inherit;
+}
