--- a/src/_css/default/links.css
+++ b/src/_css/default/links.css
@@ -3,16 +3,6 @@ a {
     color: var(---link-state, var(--accent));
   }
 
-  &[href*='://'] {
-    &::after {
-      content: '↑';
-      content: '↑' / '';
-      display: inline-block;
-      margin-inline-start: 0.5ch;
-      rotate: 0.1turn;
-    }
-  }
-
   &:where(:any-link),
   & link-text {
     text-decoration: underline;
@@ -27,6 +17,20 @@ a {
   &:active {
     ---link-line-color: var(--feature);
     ---link-line-style: wavy;
+    ---go-go-go: -3px;
+  }
+
+  &:is([href*='://'], [href^=mailto]) {
+    &::after {
+      content: '↑';
+      content: '↑' / '';
+      display: inline-block;
+      font-family: var(--fonts-sans, var(--fonts-sans--));
+      font-style: normal;
+      margin-inline-start: 0.1ch;
+      transform: rotate(0.1turn) translateY(var(---go-go-go, 0));
+      transition: transform 150ms ease-out;
+    }
   }
 
   &:has(link-text) {
