--- a/src/index.webc
+++ b/src/index.webc
@@ -1,6 +1,6 @@
 ---
 is: list
-title: Miriam Eric Suzanne
+title: Miriam Suzanne
 sub:
   - is a.k.a. _terrible mia_
   - has three first names, but only one comes first
