Remove padding from og image body

--- a/src/_layouts/og.webc
+++ b/src/_layouts/og.webc
@@ -65,6 +65,7 @@ hero:
     height: 100%;
     display: grid;
     grid-template: 'header' 1fr 'footer' auto / 100%;
+    padding: unset;
   }
 
   img {
