Fix og link i hope

--- a/src/_includes/site/open-graph.webc
+++ b/src/_includes/site/open-graph.webc
@@ -1,10 +1,10 @@
 <link
-  href="https://screenshot-api.miriam.codes"
+  href="https://v1.screenshot.11ty.dev/"
   rel="preconnect"
   crossorigin>
 <meta property="og:type" content="website" />
 <meta property="og:title" :content="title">
-<meta property="og:image" :content="ogImage(og, page.url)">
+<meta property="og:image" :content="ogImage(og, $data.ogSrc)">
 <meta property="og:url" :content="absoluteUrl(page.url, site.url)">
 <meta property="og:site_name" :content="site.title">
 <meta property="og:description" :content="mdRemove(desc)">
